# streaming-app

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
StreamingSite/: asgi.py  settings.py  urls.py  wsgi.py
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py
movies/: models.py  urls.py  views.py
movies/migrations/: 0001_initial.py
series/: models.py  urls.py  views.py
series/migrations/: 0001_initial.py
static/css/: styles.css
static/js/: script.js
templates/: base.html  index.html
templates/account/: login.html  signup.html
templates/category/: browse.html
templates/core/: auth.html  home.html  search.html
templates/movies/: movie_detail.html  movies_list.html
templates/series/: episode_detail.html  series_detail.html  series_list.html
